<resources>
    <string name="app_name" translatable="false">NewsAppDagger2</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="projectname">Nuntium</string>
    <string name="aboutlistener">Chats</string>
    <string name="bookmarkbottom">Bookmarks</string>
    <string name="saved_articles_to_the_librarybookmarkbottom">Saved articles to the library</string>
    <string name="select_your_favorite_topics">Select your favorite topics</string>
    <string name="select_some_of_your_favorite_topics_to_let_us_suggest_better_news_for_you">Select some of your favorite topics to let us suggest better news for you.</string>
    <string name="first_to_know">First to know</string>
    <string name="all_news_in_one_place_be_the_n_first_to_know_last_news">All news in one place, be the\n first to know last news</string>
    <string name="next">Next</string>
    <string name="categories">Categories</string>
    <string name="thousands_of_articles_in_each_category">Thousands of articles in each category</string>
    <string name="browse">Browse</string>
    <string name="discover_things_of_this_world">Discover things of this world</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="see_all">See all</string>
    <string name="results">Results</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="light_mode">Light Mode</string>
    <string name="getstart">Get Started</string>
    <string name="search">Search</string>
</resources>