<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Category">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/select_your_favorite_topics"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_20sdp"
        android:text="@string/select_some_of_your_favorite_topics_to_let_us_suggest_better_news_for_you"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="@dimen/_12sdp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/imageElasticView"
        app:layout_constraintTop_toBottomOf="@id/desc"
        app:spanCount="2"
        tools:listitem="@layout/item_category" />

    <io.armcha.elasticview.ElasticView
        android:id="@+id/imageElasticView"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="@color/project"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="5dp"
        app:flexibility="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            tools:ignore="InvalidId" />

    </io.armcha.elasticview.ElasticView>

</androidx.constraintlayout.widget.ConstraintLayout>