<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pager.Framlayout">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:paddingStart="@dimen/_40sdp"
        android:paddingEnd="@dimen/_40sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:dotsColor="@color/white"
        app:dotsCornerRadius="8dp"
        app:dotsSize="16dp"
        app:dotsSpacing="4dp"
        app:dotsWidthFactor="2.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewpager"
        app:progressMode="true"
        app:selectedDotColor="@color/project" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/first_to_know"
        android:textColor="@color/project"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dots_indicator" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_30sdp"
        android:text="@string/all_news_in_one_place_be_the_n_first_to_know_last_news"
        android:textColor="@color/project"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />


    <io.armcha.elasticview.ElasticView
        android:id="@+id/imageElasticView"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="@color/project"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="5dp"
        app:flexibility="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            tools:ignore="InvalidId" />

    </io.armcha.elasticview.ElasticView>

</androidx.constraintlayout.widget.ConstraintLayout>