<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.bottom.Home">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/browse"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="@string/discover_things_of_this_world"
                android:textColor="#8A000000"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintLeft_toLeftOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:backgroundTint="#F3F4F6"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/desc">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/edittext"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@android:color/transparent"
                        android:hint="@string/search"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/ed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search"
                        android:textColor="#94000000"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/edittext"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/microfon"
                        android:layout_width="@dimen/_28sdp"
                        android:layout_height="@dimen/_28sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/microfon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tablayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingStart="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/card"
                app:layout_scrollFlags="snap|enterAlways"
                app:tabGravity="fill"
                app:tabIndicatorHeight="0dp"
                app:tabMode="scrollable"
                app:tabRippleColor="@android:color/transparent"
                app:tabTextColor="@color/white" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tablayout" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/recommended_for_you"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp"
                app:layout_constraintLeft_toLeftOf="@id/name"
                app:layout_constraintTop_toBottomOf="@id/viewpager" />

            <TextView
                android:id="@+id/see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:text=""
                android:textColor="#A3000000"
                android:textSize="@dimen/_17sdp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewpager" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/see"
                tools:listitem="@layout/item_rv_home" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_450sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>